welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:13: error: '}' expected but 'case' found.
    case _ => 
    ^